--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     />
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-       <nav class="navbar navbar-expand-lg">
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
            <a class="navbar-brand" href="index.html">UFO Sightings</a>
        </nav> 
     </div>
     <div class="jumbotron">
-        <h1>The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth Is Out There</h1>
     </div>
     <div class="container-fluid">
         <div class="row">
@@ -41,15 +41,28 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form>
+                <form class="bg-dark">
                     <p>Filter Search</p>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <label for="date">Enter Date</label>
+                    <ul class="list-group bg-dark">
+                        <li class="list-group-item bg-dark">
+                            <label for="date">Date</label>
                             <input type="text" placeholder="1/10/2010" id ="datetime" />
                         </li>
-                        <li class="list-group-item">
-                            <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                        <li class="list-group-item bg-dark">
+                            <label for="city">City</label>
+                            <input type="text" placeholder="roswell" id="city" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="state">State</label>
+                            <input type="text" placeholder="ca" id="state" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Shape</label>
+                            <input type="text" placeholder="circle" id="shape" />
                         </li>
                     </ul>
                 </form>
